# pkg/handler/comment.go
@@ -7,6 +7,19 @@ import (
 	"strconv"
 )
 
+// @Summary     Add Comment
+// @Security    ApiKeyAuth
+// @Tags        comment
+// @Description Add Comment to Advert
+// @ID          add_comment
+// @Accept      json
+// @Produce     json
+// @Param       id      path int     true   "advert id"
+// @Success     200     {string} string "id"
+// @Failure     400     error    http.StatusBadRequest
+// @Failure     500     error    http.StatusInternalServerError
+// @Failure     default error    http.StatusBadRequest
+// @Router      /api/{id}/comment [post]
 func(h *Handler) addComment(c *gin.Context){
 	userId, err := getUserId(c)
 	if err != nil {
@@ -31,25 +44,19 @@ func(h *Handler) addComment(c *gin.Context){
 	c.JSON(http.StatusOK, "Success")
 }
 
-func(h *Handler) getComment(c *gin.Context){
-	userId, err := getUserId(c)
-	if err != nil {
-		newErrorResponse(c, http.StatusBadRequest, err.Error())
-		return
-	}
-	advertId, err := strconv.Atoi(c.Param("id"))
-	if err != nil {
-		newErrorResponse(c, http.StatusBadRequest, "invalid advert id param")
-		return
-	}
-	comments, err := h.services.Comment.GetCom(advertId, userId)
-	if err != nil {
-		newErrorResponse(c ,http.StatusInternalServerError, err.Error())
-		return
-	}
-	c.JSON(http.StatusOK, comments)
-}
-
+// @Summary     Delete Comment
+// @Security    ApiKeyAuth
+// @Tags        comment
+// @Description Delete Advert Comment by ID
+// @ID          delete_comment
+// @Accept      json
+// @Produce     json
+// @Param       id      path     int true "advert ID"
+// @Success     200     {string} http.StatusOK
+// @Failure     400     error    http.StatusBadRequest
+// @Failure     500     error    http.StatusInternalServerError
+// @Failure     default error    http.StatusBadRequest
+// @Router      /api/advert/{id}/comment/{comment_id} [delete]
 func(h *Handler) delComment(c *gin.Context){
 	userId, err := getUserId(c)
 	if err != nil {
@@ -72,6 +79,20 @@ func(h *Handler) delComment(c *gin.Context){
 	}
 	c.JSON(http.StatusOK, "Successfully deleted")
 }
+
+// @Summary     Update Comment
+// @Security    ApiKeyAuth
+// @Tags        comment
+// @Description Update Advert Comment By ID
+// @ID          update comment
+// @Accept      json
+// @Produce     json
+// @Param       id      path     int true "advert ID"
+// @Success     200     {string} http.StatusOK
+// @Failure     400     error    http.StatusBadRequest
+// @Failure     500     error    http.StatusInternalServerError
+// @Failure     default error    http.StatusBadRequest
+// @Router      /api/advert/{id}/comment/{comment_id} [put]
 func(h *Handler) updComment(c *gin.Context){
 	userId, err := getUserId(c)
 	if err != nil {
